index.html исправление_3

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
     <section class="section-products">
       <article class="article-product">
         <picture class="article-product__images">
-          <source media="(min-width: 641px) and (max-width: 1200px)" src="images/shop-item-tablet1.jpg">
-          <source media="(max-width: 640px)" src="images/shop-item-mobile1.jpg">
+          <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet1.jpg" alt="Подушка на диване">
+          <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg" alt="Подушка на диване">
           <img src="images/shop-item-desk1.jpg" class="article-product__image" alt="Подушка на диване">
         </picture>
         <div class="product__details">
@@ -405,8 +405,8 @@
       </article>
       <article class="article-product">
         <picture class="article-product__images">
-          <source media="(min-width: 641px) and (max-width: 1200px)" src="images/shop-item-tablet2.jpg">
-          <source media="(max-width: 640px)" src="images/shop-item-mobile2.jpg">
+          <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet2.jpg">
+          <source media="(max-width: 640px)" srcset="images/shop-item-mobile2.jpg">
           <img src="images/shop-item-desk2.jpg" class="article-product__image" alt="Кукла зайчик на столе">
         </picture>
         <div class="product__details">
@@ -428,8 +428,8 @@
       </article>
       <article class="article-product">
         <picture class="article-product__images">
-          <source media="(min-width: 641px) and (max-width: 1200px)" src="images/shop-item-tablet3.jpg">
-          <source media="(max-width: 640px)" src="images/shop-item-mobile3.jpg">
+          <source media="(min-width: 641px) and (max-width: 1200px)" srcset="images/shop-item-tablet3.jpg">
+          <source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg">
           <img src="images/shop-item-desk3.jpg" class="article-product__image" alt="Шестиугольная рамка с вазой">
         </picture>
         <div class="product__details">
